fix: header title spacing

--- a/assets/styles/vars/variables.sass
+++ b/assets/styles/vars/variables.sass
@@ -14,7 +14,7 @@ body
   --selection-background: #B6FFF5
   --selection-color: white
   --color: #B6FFF5
-  --color-faded: .33
+  --color-faded: .3
   --active-background: #B6FFF5
   --active-color: black
   --interactive-color: #B6FFF5
